# 6dof_sensor_fusion

./: CMakeLists.txt  package.xml
include/m7_sensor_fusion/: Covariance.cpp  EKF.cpp  EKF.h  Jacobian.cpp  Parameters.h  Types.h
launch/: sensor_fusion.launch  unit_test.launch
octave/: imuMeasurementJacobian.asv  imuMeasurementJacobian.c  imuMeasurementJacobian.m  stateTransitionJacobian.c  stateTransitionJacobian.m
src/: sensor_fusion.cpp
test/: unit_test.cpp
